settings: Fix modal out of screen on mobile.
For the email and full name modals we simply change width to max-width.

The password modal used a flex-row class for no apparent reason,
the class wasn't used anywhere else and removing it fixes the UI bug.

Fixes #15311.

--- a/static/styles/components.scss
+++ b/static/styles/components.scss
@@ -106,30 +106,6 @@ a.no-underline:hover {
     }
 }
 
-/* -- flex forms -- */
-.flex-row {
-    display: flex;
-
-    * {
-        box-sizing: border-box;
-    }
-
-    input[type=text],
-    input[type=password] {
-        height: auto;
-        width: 100%;
-    }
-
-    &.normal {
-        width: 500px;
-    }
-
-    .field {
-        margin: 10px;
-        width: 100%;
-    }
-}
-
 i.zulip-icon.bot {
     color: hsl(180, 5%, 74%);
     vertical-align: top;
